--- a/css/site.css
+++ b/css/site.css
@@ -31,24 +31,32 @@
   cursor: default;
 }
 
+
 #probs {
-  width: 100%;
-  height: 80px;
-  background-color: #ccc;
+  width: 400px;
+  height: 120px;
+  position: absolute;
+  top: 5px;
+  left: 45px;
+}
+
+#info {
+  position: absolute;
+  left: 5px;
+  bottom: 5px;
+  right: 5px;
+  height: 350px;
+  overflow: scroll;
+}
+
+.info {
+  font-family: sans-serif;
+  z-index: 100;
+  background-color: white;
+  opacity: 0.8;
 }
 
 .edge {
   stroke: #000;
 }
 
-.info {
-    font-family: sans-serif;
-    z-index: 100;
-    background-color: white;
-    opacity: 0.8;
-    position: absolute;
-    left: 5px;
-    bottom: 5px;
-    width: 400px;
-    height: 400px;
-}
